--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,5 +16,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "hardhat": "^2.17.1"
   }
 }
