--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bundlr-network/client": "^0.11.10",
+    "@livepeer/react": "^2.8.0",
     "autoprefixer": "10.4.14",
+    "bignumber.js": "^9.1.1",
     "next": "13.4.12",
+    "othent": "^1.0.638",
+    "plyr": "^3.7.8",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "wagmi": "^1.3.9"
   },
   "devDependencies": {
     "hardhat": "^2.17.1"
