--- a/package.json
+++ b/package.json
@@ -1,29 +1,46 @@
 {
-  "name": "webapp",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dragbuild": "next build && next export"
   },
   "dependencies": {
-    "@bundlr-network/client": "^0.11.10",
-    "@livepeer/react": "^2.8.0",
-    "autoprefixer": "10.4.14",
-    "bignumber.js": "^9.1.1",
-    "next": "13.4.12",
+    "@bundlr-network/client": "^0.7.8",
+    "@rainbow-me/rainbowkit": "0.2.1",
+    "@types/express": "^4.17.17",
+    "arweavekit": "^1.4.8",
+    "axios": "^1.4.0",
+    "bignumber.js": "^9.0.2",
+    "dotenv": "^16.3.1",
+    "ethers": "5.6.8",
+    "express": "^4.18.2",
+    "kwil": "^3.2.3",
+    "next": "12.1.6",
     "othent": "^1.0.638",
     "plyr": "^3.7.8",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-icons": "^4.10.1",
-    "tailwindcss": "3.3.3",
-    "wagmi": "^1.3.9"
+    "react-toastify": "^9.1.3",
+    "text-encoding": "^0.7.0",
+    "uuid": "^9.0.0",
+    "wagmi": "0.4.5",
+    "web3.storage": "^4.5.5"
   },
   "devDependencies": {
-    "hardhat": "^2.17.1"
+    "@types/node": "^17.0.42",
+    "@types/react": "18.0.12",
+    "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.17.0",
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.2",
+    "typescript": "4.7.3"
   }
 }
